Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>
 <a id="cmsgrid" class="anchor" href="#cmsgrid" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cmsgrid</h1>
 
-<p>CMSGrid is a CKEditor plugin that helps users create and arrange Bootstrap 3 grid layouts. </p>
+<p>CMSGrid is a CKEditor 4 plugin that helps users create and arrange Bootstrap 3 grid layouts. </p>
 
 <ul>
 <li>Insert a variety of Bootstrap 3 layouts</li>
@@ -51,7 +51,7 @@
 
 <ul>
 <li>Download the plugin</li>
-<li>Extract the contents to your CKEditor plugins directory: <code>/path/to/ckeditor/plugins/cmsgrid</code>
+<li>Extract the contents to your CKEditor 4 plugins directory: <code>/path/to/ckeditor/plugins/cmsgrid</code>
 </li>
 <li>Open this file <code>/path/to/ckeditor/config.js</code>, and add the code below to it.</li>
 <li>You'll have to edit the lines of code below which refer to Bootstrap 3 &amp; jQuery and set the paths &amp; versions accordingly</li>
@@ -89,7 +89,7 @@
 </code></pre>
 
 <ul>
-<li>Lastly, embed CKEditor like so in your html page</li>
+<li>Lastly, embed CKEditor 4 like so in your html page</li>
 </ul>
 
 <pre><code>&lt;textarea name="editor" id="editor"&gt;&lt;/textarea&gt;
